--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^7.6.2",
+    "react-spinners": "^0.17.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
