--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hello-pangea/dnd": "^18.0.1",
     "@tanstack/react-query": "^5.83.0",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.19.1",
